# hazmat-classifier

./: .env.example  .gitignore  README.md  classify_products.ipynb  defs_and_tools.py  get_hazmat_definition.ipynb  get_product_descriptions.ipynb  get_product_ids.ipynb  main.py  manual_annotation.ipynb  prompts.txt  pyproject.toml
data/: README.md  hazmat-definition.md
data/dataset_1/: README.md  dataset_1_annotated.csv  dataset_1_annotated_classified_products.jsonl  dataset_1_annotated_think_log.txt  dataset_1_classified_products.jsonl  dataset_1_raw_log.txt  dataset_1_think_log.txt  think_log.txt
data/dataset_1/products_ids/: products_10_escritório.json  products_11_escola.json  products_12_celular.json  products_13_informática.json  products_14_roupas.json  products_15_calçados.json  products_16_acessórios.json  products_17_bebê.json  products_1_limpeza.json  products_20_academia.json  products_28_vídeo.json  products_2_beleza.json  products_30_vigilância.json  products_3_ferramentas.json  products_44_som automotivo.json  products_4_eletrônicos.json  products_5_saúde.json  products_6_automotivo.json  products_72_livros.json  products_7_casa.json  products_8_cozinha.json  products_9_banheiro.json
data/dataset_1/products_info/: info_products_14_roupas.json  (+8 more)
docs/: README.md
notebooks/: README.md  classify_products.ipynb  convert_prod_info_to_csv.ipynb  get_product_ids.ipynb
src/: README.md  classification.py  classifier_v1.py  classifier_v2.py  config.py  config.py.bak  data_collection.py  data_processing.py  data_utils.py  llm_utils.py
