[tool.poetry]
name = "hazmat-classifier"
version = "0.1.0"
description = ""
authors = ["Guilherme Simas <gsimas.souza@gmail.com>"]
readme = "README.md"
packages = []  # opcional, se quiser deixar claro que nada será empacotado
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "^2.3.0"
requests = "^2.32.4"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"